# Conscio

./: .bandit  .gitignore  404.html  AGENTS.md  AUDIT_FINDINGS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  REPORT_v1.3.3.md  SECURITY.md  SKILL.md  USAGE.md  fable5-agentic-clone-prompt.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  vulture_whitelist.py
.github/workflows/: ci.yml  docs.yml  release.yml
.hermes/plans/: context-rtk-integration.md
CLAIMS/: index.html
Knolayer/: index.html
REPORT_v1.5_HANDOFF/: index.html
Report-Hermet/: index.html
bench/: v1.2-curve-qwen3.5-0.8b.json
bench/v1.0.0-bench/: index.html
bench/v1.2-campaign/: index.html
bench/v1.2-skill-curve/: index.html
config/: default.yaml
conscio/: USAGE.md  __init__.py  __main__.py  adapter_config.py  auto_evolution.py  axis_pack.py  bench.py  checkpoint.py  cli.py  coherence.py  constants.py  content_layer.py  content_store.py  context_manager.py  daemon.py  dedup.py  diagnostics.py  dreaming.py  embedding.py  engine.py  entity_detector.py  evaluation.py  event_bus.py  failure.py  gates.py  goal_generator.py  graphify_bridge.py  guards.py  hallways.py  inner_monologue.py  kg.py  meta_cognition.py  metabolic.py  migrate.py  migration.py  miner.py  models.py  output_filter.py  pipelines.py  plugins.py  (+21 more)
conscio/agency/: __init__.py  act.py  actor.py  adapter.py  adapters.py  breaker.py  contracts.py  fallback_adapter.py  fingerprint.py  gateway.py  grammar.py  host_act.py  intercepter.py  ledger.py  loop.py  profiles.py  promote.py  relay_cognize.py  relay_initiate.py  relay_respond.py  review_apply.py  skeptic.py  skills.py  tools.py  trial.py  trust.py
conscio/hub/: __init__.py  config.py  control.py  model_test.py  providers.py  server.py
conscio/hub/static/: app.js  index.html  style.css
conscio/installer/: __init__.py  binding.py  cli.py  daemonctl.py  extras.py  hostcfg.py  spaces.py  wizard.py
conscio/integrations/claude_code/: materialize.py
conscio/liaison/: __init__.py  mailbox.py  relay.py  review.py
conscio/mcp/: __init__.py  jsonrpc.py  protocol.py  schemas.py  seen.py  server.py
conscio/noosphere/: __init__.py  artifact.py  audit.py  catalog.py  cli.py  identity.py  importer.py  paths.py  publish.py  quarantine.py  record.py  record_catalog.py  record_publish.py
conscio/observatory/: __init__.py  liaison_view.py  projection.py  server.py  society.py
conscio/observatory/static/: app.js  index.html  style.css
conscio/perception/: __init__.py  agent_sensor.py  host_sensor.py  relay_sensor.py  sensor.py
conscio/presets/axes/: core.json
conscio/presets/voice/: coherence-style.md
consciousness_recognition/: __init__.py  context_manager.py  meta_cognition.py
docs/: CLAIMS.md  Knolayer.md  RELEASING.md  REPORT_v1.5_HANDOFF.md  Report-Hermet.md  agent-development-playbook.md  auditedF2-volition-clone-prompt.md  blueprint v1.0.0.md  f3-discipline-analysis.md  fable-quality-patterns.md  fable5-F1-method-analysis-report.md  graphify-autosync-design.md  index.md  roadmap.md  session-handoff-architecture.md
docs/bench/: v1.0.0-bench.md  v1.2-campaign.md  v1.2-immune-qwen3.5-0.8b.json  v1.2-skill-curve.md
docs/cognitive-skills/: 00-INDEX.md
docs/cognitive-skills/01-architectural-meta-cognition/: SKILL.md
docs/cognitive-skills/02-brainstorming-modeling/: SKILL.md
docs/cognitive-skills/03-architectural-planning/: SKILL.md
docs/cognitive-skills/04-execution-coding/: SKILL.md
docs/cognitive-skills/05-complex-debugging/: SKILL.md
docs/cognitive-skills/06-orchestration/: SKILL.md
docs/cognitive-skills/07-writing-documentation/: SKILL.md
docs/guides/: architecture.md  hub.md  install.md  integration.md  liaison.md  mcp.md  noosphere.md  observatory.md  plugins.md  quickstart.md  safety-rules.md
docs/guides/workflows/: architecture-audit.md  continuous-learning.md  introspection-debugging.md
docs/noosphere/: cognitive-modes-model.md  coherence-engine-model.md  metabolic-model.md  recursive-coherence-loop.md  self-judgment-model.md  semantic-reconciliation.md
docs/reference/: conscio_functions.md  public-api.md
docs/superpowers/plans/: 2026-06-05-conscio-v0.3-metabolic-consciousness.md  2026-06-05-conscio-v0.4-self-judgment.md  2026-06-06-conscio-v0.5-cognitive-modes.md  (+3 more)
examples/: agent_companion.py  custom_adapter.py  demo.py  host_consumer.py  host_guardian.py
guides/architecture/: index.html
guides/hub/: index.html
guides/install/: index.html
guides/integration/: index.html
guides/liaison/: index.html
guides/mcp/: index.html
guides/noosphere/: index.html
guides/observatory/: index.html
guides/plugins/: index.html
guides/quickstart/: index.html
guides/safety-rules/: index.html
mempalace/: archive-2026-06-04.md
reference/conscio_functions/: index.html
reference/public-api/: index.html
scripts/: ablation_real.py  ablation_study.py  bench_baseline.py  benchmark_full.py  reflect.py  session_handoff.py
search/: search_index.json
skill/: coherence-style.md
tests/: conftest.py  test_adapter_config.py  test_adapter_config_api_key_env.py  test_agency_act.py  test_agency_act_immunity.py  test_agency_actor.py  test_agency_adapter.py  test_agency_adapters_http.py  test_agency_adversarial.py  test_agency_arbiter.py  test_agency_bench.py  test_agency_breaker.py  test_agency_contracts.py  test_agency_engine_immunity.py  test_agency_gateway.py  test_agency_grammar.py  test_agency_host_act.py  test_agency_intercepter.py  test_agency_ledger.py  test_agency_ledger_v201.py  test_agency_loop.py  test_agency_no_network.py  test_agency_profiles.py  test_agency_promote.py  test_agency_skeptic.py  test_agency_skills.py  test_agency_skills_wiring.py  test_agency_state.py  test_agency_tools.py  test_agency_tools_manifest.py  test_agency_trial.py  test_agency_trust.py  test_agency_volition.py  test_agent_sensor.py  test_auto_evolution.py  test_awake.py  test_axis_pack.py  test_axis_pack_battery.py  test_cc_assets.py  test_cc_hook.py  (+184 more)
tests/fixtures/: graph_small.json
(+21 files in other folders)
