[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conscio"
version = "1.0.0b1"
description = "Self-awareness framework for AI agents — emergent consciousness via context-aware memory, introspection, and goal generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
 "numpy>=1.24",
]
authors = [
 {name = "Neguiolidas", email = "neguitech@proton.me"},
]
keywords = ["ai", "consciousness", "agents", "introspection", "meta-cognition"]
classifiers = [
 "Development Status :: 3 - Alpha",
 "Intended Audience :: Developers",
 "License :: OSI Approved :: MIT License",
 "Programming Language :: Python :: 3",
 "Programming Language :: Python :: 3.10",
 "Programming Language :: Python :: 3.11",
 "Programming Language :: Python :: 3.12",
 "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Neguiolidas/Conscio"
Repository = "https://github.com/Neguiolidas/Conscio"
Issues = "https://github.com/Neguiolidas/Conscio/issues"
Changelog = "https://github.com/Neguiolidas/Conscio/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
 "pytest>=7.0",
 "pytest-cov>=4.0",
 "ruff>=0.8",
 "mypy>=1.0",
 "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["conscio*"]
