[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conscio"
dynamic = ["version"]
description = "Self-awareness framework for AI agents — emergent consciousness via context-aware memory, introspection, and goal generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
 "numpy>=1.24",
]
authors = [
 {name = "Neguiolidas", email = "neguitech@proton.me"},
]
keywords = ["ai", "consciousness", "agents", "introspection", "meta-cognition"]
classifiers = [
 "Development Status :: 4 - Beta",
 "Intended Audience :: Developers",
 "License :: OSI Approved :: MIT License",
 "Programming Language :: Python :: 3",
 "Programming Language :: Python :: 3.10",
 "Programming Language :: Python :: 3.11",
 "Programming Language :: Python :: 3.12",
 "Programming Language :: Python :: 3.13",
 "Topic :: Scientific/Engineering :: Artificial Intelligence",
 "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Neguiolidas/Conscio"
Repository = "https://github.com/Neguiolidas/Conscio"
Issues = "https://github.com/Neguiolidas/Conscio/issues"
Changelog = "https://github.com/Neguiolidas/Conscio/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
 "pytest>=7.0",
 "pytest-cov>=4.0",
 "ruff>=0.8",
 "mypy>=1.0",
 "pyyaml>=6.0",
]
docs = [
 "mkdocs-material>=9.5",
]

[project.scripts]
conscio = "conscio.cli:main"
conscio-bench = "conscio.bench:main"
conscio-daemon = "conscio.daemon:main"
conscio-mcp = "conscio.mcp.server:main"
conscio-hub = "conscio.hub.server:main"

[project.entry-points."conscio.sensors"]
host = "conscio.perception.host_sensor:HostSensor"
agent = "conscio.perception.agent_sensor:AgentSensor"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["conscio*"]

[tool.setuptools.dynamic]
version = {attr = "conscio.__version__"}

[tool.setuptools.package-data]
conscio = ["py.typed", "hub/static/*"]
