[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conscio"
dynamic = ["version"]
description = "Self-awareness framework for AI agents — emergent consciousness via context-aware memory, introspection, and goal generation"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
 "numpy>=1.24",
]
authors = [
 {name = "Neguiolidas", email = "neguitech@proton.me"},
]
keywords = ["ai", "consciousness", "agents", "introspection", "meta-cognition"]
classifiers = [
 "Development Status :: 4 - Beta",
 "Intended Audience :: Developers",
 "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
 "Programming Language :: Python :: 3",
 "Programming Language :: Python :: 3.10",
 "Programming Language :: Python :: 3.11",
 "Programming Language :: Python :: 3.12",
 "Programming Language :: Python :: 3.13",
 "Topic :: Scientific/Engineering :: Artificial Intelligence",
 "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Neguiolidas/Conscio"
Repository = "https://github.com/Neguiolidas/Conscio"
Issues = "https://github.com/Neguiolidas/Conscio/issues"
Changelog = "https://github.com/Neguiolidas/Conscio/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.8",
  "pyright>=1.1.350",
  "bandit>=1.7",
  "vulture>=2.1",
  "pyyaml>=6.0",
]
docs = [
 "mkdocs-material>=9.5",
]

[project.scripts]
conscio = "conscio.cli:main"
conscio-bench = "conscio.bench:main"
conscio-daemon = "conscio.daemon:main"
conscio-mcp = "conscio.mcp.server:main"
conscio-hub = "conscio.hub.server:main"
conscio-observatory = "conscio.observatory.server:main"

[project.entry-points."conscio.sensors"]
host = "conscio.perception.host_sensor:HostSensor"
agent = "conscio.perception.agent_sensor:AgentSensor"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["conscio*"]

[tool.setuptools.dynamic]
version = {attr = "conscio.__version__"}

[tool.setuptools.package-data]
conscio = ["py.typed", "hub/static/*", "observatory/static/*", "integrations/claude_code/assets/**/*", "USAGE.md"]

# ── pyright (type checker — substitui mypy) ─────────────────────────
[tool.pyright]
include = ["conscio"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportPossiblyUnboundVariable = "error"
reportOptionalMemberAccess = "error"
reportIncompatibleMethodOverride = "warning"
reportMissingImports = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportMissingTypeStubs = "none"

# ── bandit (security linter) ────────────────────────────────────────
[tool.bandit]
targets = ["conscio"]
severity = "medium"
confidence = "medium"
skips = [
  "B101",  # assert_used — pytest usa assert natural
  "B113",  # request_without_timeout — RAG factory tem timeout explicito
]

# ── vulture (dead code finder) ──────────────────────────────────────
[tool.vulture]
paths = ["conscio"]
min_confidence = 60
# Métodos do_HTTP* são dispatch do BaseHTTPRequestHandler — não são "mortos"
# row_factory é sqlite3 idiom — atribuição tem efeito colateral
# Funções de API pública podem ser chamadas externamente
exclude = [
  "conscio/observatory/server.py",
  "conscio/session_lifecycle.py",
]
